# cpp-mini-project

./: CMakeLists.txt  Interface.cpp  README.md  Staff.cpp  Staff.h  Student.h  main.cpp
greedy-snake/: CMakeLists.txt  Controller.cpp  Controller.h  Food.cpp  Food.h  Map.cpp  Map.h  Point.cpp  Point.h  Snake.cpp  Snake.h  StartInterface.cpp  StartInterface.h  Utils.cpp  Utils.h  main.cpp
json-parser/: .clang-tidy  CMakeLists.txt  main.cpp  test.json
json-parser/json/: CMakeLists.txt  json.cpp  json.h
self-service-ordering-system/: Buyer.cpp  Interface.cpp  Interface.h  Menu.h  Seller.cpp  Seller.h  main.cpp
ssos/: Buyer.h  CMakeLists.txt  Menu.cpp
student-info-management-system/: .gitignore  CMakeLists.txt  Interface.h  Student.cpp
sudoku/: CMakeLists.txt  Common.h  I18n.cpp  I18n.h  Interface.cpp  Interface.h  Scene.cpp  Scene.h  Utility.cpp  Utility.h  main.cpp
web-server/: .clang-format  .clang-tidy  README.md  Utility.cpp  Utility.h  main.cpp  webserver
web-server/httpdocs/: post.cgi  post.html  test.html
